

acct_mgr-0.3.1 (not yet released) - branch 0.11
 resolved issues
 * #8963: Restore compatibility with Trac 0.11 - holding 10 different issues
 * further improve redirect loop protection (infinite loop after /login)
 * add more verbose error log messages for missing/unreadable password file
 * remove duplicated message in Trac 0.11 at account details admin page


acct_mgr-0.3 (07.07.2011) - branch 0.11
 resolved issues
 * #3233: Infinite redirect loop after resetting the password
 * #3783: Form based login fails to forward nicely on referrer outside of Trac
 * #3989: Email verification and password reset with notification lock users
 * #4040: TracError instance has no attribute 'acctmgr' on new user creation
 * #4160: Password reset oddness with multiple projects config
 * #5247: Stack trace escapes to user when htdigest file is not writeable
 * #5964: Prevent multiple calls to LoginModule._remote_user()
 * #6821: Register and 'Forgot your password?' links can no longer be enabled
 * #7850: Error after upgrade from 0.11 to trunk version
 * #7863: Syntax error found when building egg
 * #7880: 'ioerror: invalid mode: Ur' in htfile.py
 * #8061: An input element has no child nodes
 * #8063: Better i18n codes
 * #8381: Failure to verify valid passwords after migration Windows => FreeBSD
 * #8534: Can't resend password reset email
 * #8549: Changing password in SessionStore if forced has no effect
 * #8663: Disable register link on the login page
 * #8834: TypeError: sequence item 0: expected string, int found
 * #8813: German docs of options, even when browser's locale isn't 'de'
 * #8925: Register form user field should be username
 * #8936: Cannot delete user using AccountModule from web_ui
 * #8939: Fix for "mgr" not found error in http.py
 * fix AccountModule.reset_password_enabled() from type list to boolean
 * really disable reset password page, if feature is disabled
 * fix password reset procedure (preventing easy account takeover)

 new features